[package]
version = "0.1.0"
name = "fibonacci-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = "2.0.0"
num = { version = "0.4.1", default-features = false }
serde_yaml = "0.9.34"
fibonacci-lib = { path = "../lib" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", branch = "patch-v0.8.0" }
ff = "0.13.0"
rand = "0.8.5"
group = "0.13.0"